add results framework in the index.html and hides them using the styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,27 @@ body {
 h1 {
   text-align: center;
 }
+
+h3 {
+  text-align: center;
+}
+
+#ruby-rails {
+  display: none;
+}
+
+#php-drupal {
+  display: none;
+}
+
+#java-android {
+  display: none;
+}
+
+#css-design {
+  display: none;
+}
+
+#c-net {
+  display: none;
+}
