add some styling to the site, update some more lorem ipsum in quiz section, found a bug where sometimes the button to return to the quiz does not work, initial debug fail

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #fffff0;
+  color: #006400;
   margin: 40px;
 }
 
@@ -28,4 +30,9 @@ h3 {
 
 #c-net {
   display: none;
+}
+
+.centered {
+  text-align: center;
+  margin-top: 25px;
 }
