--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,14 @@ img {
 
 header {
   background-color: white;
-  border: black;
-  border-width: medium;
-  border-style: double;
+  border: #a9a9a9;
+  border-width: thin;
+  border-style: solid;
+  border-radius: 5px;
+  bor
+}
+
+ul {
+  font-weight: bold;
+  text-align: center;
 }
