--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ h1 {
 
 h3 {
   text-align: center;
+  margin-bottom: 20px;
+}
+
+h4 {
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 #ruby-rails {
@@ -34,7 +40,7 @@ h3 {
 
 .centered {
   text-align: center;
-  margin-top: 25px;
+  margin-top: 40px;
 }
 
 img {
@@ -42,7 +48,7 @@ img {
   height: 150px;
 }
 
-header {
+.media {
   background-color: white;
   border: #a9a9a9;
   border-width: thin;
@@ -54,4 +60,10 @@ header {
 ul {
   font-weight: bold;
   text-align: center;
+}
+
+@media (max-width: 500px) {
+  img {
+    visibility: hidden;
+  }
 }
