fix small typo in question one javascript, begin work on two seperate divs to handle media types, initial attempt to solve form bug where user can submit and get a result after submitting no answers is on hold

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,14 @@ ul {
   text-align: center;
 }
 
-@media (max-width: 500px) {
-  img {
-    visibility: hidden;
+@media (min-width: 300px) {
+  #pc {
+    display: none;
+  }
+}
+
+@media (max-width: 299px) {
+  #mobile {
+    display: none;
   }
 }
